Bug 1112502 - Right clicking on a recurring event, and bringing up the attendance sub-menu gives unreadable titles. r=philipp, a=Paenglab

--- a/calendar/base/themes/common/calendar-views.css
+++ b/calendar/base/themes/common/calendar-views.css
@@ -990,6 +990,7 @@ calendar-event-box[gripBars="both"]:not([readonly="true"]):hover .calendar-event
 
 .calendar-context-heading-label {
     font-weight: bold;
+    color: menutext;
 }
 
 calendar-event-box,
